--- a/style.css
+++ b/style.css
@@ -175,7 +175,11 @@ html {
 	border-color: transparent transparent #ffffff transparent;
 }
 .resultado__content {
-	background-color: #112670;
+    background: #112670;
+    background: -webkit-radial-gradient(rgba(17, 38, 112, 0.72) 0%, #112670 49%);
+    background: -o-radial-gradient( rgba(17, 38, 112, 0.72) 0%, #112670 49%);
+    background: -moz-radial-gradient(rgba(17, 38, 112, 0.72) 0%, #112670 49%);
+    background: radial-gradient( rgba(17, 38, 112, 0.72) 0%, #112670 49%);
     padding-top: 10vw;
 }
 .resultado__content p.resultado__escuchados {
@@ -217,7 +221,7 @@ html {
 }
 .intensidades__content div#first label, .intensidades__content div#second label {
 	font-weight: 400;
-    color: #0f327c;
+    color: #112670;
     font-size: 1.2vw;
 }
 .intensidades__content div#second {
@@ -227,7 +231,7 @@ html {
 	width: 10vw;
     height: auto;
     border-radius: 50%;
-    border: 5px solid #0f327c;
+    border: 5px solid #112670;
 }
 .intensidades__background {
     background-image: url(images/intensidades.png);
@@ -241,7 +245,7 @@ html {
 	width: 40%;
 	text-align: center;
 	margin: 0 auto;
-	color: #0f327c;
+	color: #112670;
 	font-size: 2.5vw;
 	font-weight: 800;
     line-height: 3.5vw;
@@ -250,7 +254,11 @@ html {
 	border-color: transparent transparent #f6d603 transparent;
 }
 .playlist__content {
-	background-color: #0f327c;
+    background: #112670 ;
+    background: -webkit-radial-gradient(rgba(17, 38, 112, 0.72) 0%, #112670 49%);
+    background: -o-radial-gradient( rgba(17, 38, 112, 0.72) 0%, #112670 49%);
+    background: -moz-radial-gradient(rgba(17, 38, 112, 0.72) 0%, #112670 49%);
+    background: radial-gradient( rgba(17, 38, 112, 0.72) 0%, #112670 49%);
 	text-align: center;
 	padding-bottom: 5%;
 }
@@ -282,7 +290,7 @@ html {
 	top: 5px;
 }
 .estilo__content .div__modify {
-	border-color: transparent transparent #0f327c transparent;
+	border-color: transparent transparent #112670 transparent;
 }
 .estilo__content {
 	background-color: #f6d603;
